ipc/ipdl/test/ipdl/error/badProtocolInclude.ipdl
//error: can't locate include file `IDONTEXIST.ipdl'

include protocol IDONTEXIST;

// error: nonexistent protocol ^^^

protocol badProtocolInclude {
child: Msg();
};
